@@ -8,14 +8,14 @@
  * http://sourceforge.net/projects/atunes
  *
  * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License
+ * modify it under the terms of the GNU General License
  * as published by the Free Software Foundation; either version 2
  * of the License, or (at your option) any later version.
  *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * GNU General License for more details.
  */
 
 package net.sourceforge.atunes.kernel.modules.cdripper;
@@ -24,10 +24,16 @@ import java.io.File;
 
 
 /**
- * The Interface Encoder.
+ * Interface to implement by components responsible of transform a file of an audio object to another file with a different format
  */
 public interface Encoder {
 
+	/**
+	 * Called to test if encoder is available
+	 * @return
+	 */
+	boolean testEncoder();
+	
     /**
      * Encode.
      * 
@@ -46,14 +52,14 @@ public interface Encoder {
      * 
      * @return true, if successful
      */
-    public boolean encode(File originalFile, File encodedFile, String title, int trackNumber, String artist, String composer);
+    boolean encode(File originalFile, File encodedFile, String title, int trackNumber, String artist, String composer);
 
     /**
      * Gets the extension of encoded files.
      * 
      * @return the extension of encoded files
      */
-    public String getExtensionOfEncodedFiles();
+    String getExtensionOfEncodedFiles();
 
     /**
      * Sets the album.
@@ -61,7 +67,7 @@ public interface Encoder {
      * @param album
      *            the new album
      */
-    public void setAlbum(String album);
+    void setAlbum(String album);
 
     /**
      * Sets the artist.
@@ -69,7 +75,7 @@ public interface Encoder {
      * @param artist
      *            the new artist
      */
-    public void setAlbumArtist(String artist);
+    void setAlbumArtist(String artist);
 
     /**
      * Sets the genre.
@@ -77,7 +83,7 @@ public interface Encoder {
      * @param genre
      *            the new genre
      */
-    public void setGenre(String genre);
+    void setGenre(String genre);
 
     /**
      * Sets the listener.
@@ -85,7 +91,7 @@ public interface Encoder {
      * @param listener
      *            the new listener
      */
-    public void setListener(ProgressListener listener);
+    void setListener(ProgressListener listener);
 
     /**
      * Sets the quality.
@@ -93,7 +99,7 @@ public interface Encoder {
      * @param quality
      *            the new quality
      */
-    public void setQuality(String quality);
+    void setQuality(String quality);
 
     /**
      * Sets the year.
@@ -101,32 +107,32 @@ public interface Encoder {
      * @param year
      *            the new year
      */
-    public void setYear(int year);
+    void setYear(int year);
 
     /**
      * Stop.
      */
-    public void stop();
+    void stop();
 
     /**
      * Returns a list of all available qualities for this encoder
      * 
      * @return
      */
-    public String[] getAvailableQualities();
+    String[] getAvailableQualities();
 
     /**
      * Returns default quality
      * 
      * @return
      */
-    public String getDefaultQuality();
+    String getDefaultQuality();
 
     /**
      * Get format name
      * 
      * @return
      */
-    public String getFormatName();
+    String getFormatName();
 
 }
